Fix word wrap on text title
Added `overflow: scroll` and `white-space: nowrap` to avoid
word wrapping and breaking layout

--- a/src/index.scss
+++ b/src/index.scss
@@ -89,6 +89,8 @@
   width: 300px;
   padding: 10px;
   cursor: default;
+  overflow: scroll;
+  white-space: nowrap;
   color: black;
   background: #87a0b2;
   transition: .3s;
